--- a/Admin/templates/adminhome.html
+++ b/Admin/templates/adminhome.html
@@ -42,7 +42,7 @@
                                                     <div class="stat-panel-title text-uppercase">Listed Vehicles</div>
                                                 </div>
                                             </div>
-                                            <a href="/manageV"
+                                            <a href="manageV.html"
                                                 class="block-anchor panel-footer text-center">Full Detail &nbsp; <i
                                                     class="fa fa-arrow-right"></i></a>
                                         </div>
@@ -57,7 +57,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="/manageR"
+                                            <a href="manageR.html"
                                                 class="block-anchor panel-footer text-center">Full Detail &nbsp; <i
                                                     class="fa fa-arrow-right"></i></a>
                                         </div>
@@ -71,7 +71,7 @@
                                                     <div class="stat-panel-title text-uppercase">Feedbacks</div>
                                                 </div>
                                             </div>
-                                            <a href="/testimonials"
+                                            <a href="testimonials.html"
                                                 class="block-anchor panel-footer text-center">Full Detail &nbsp; <i
                                                     class="fa fa-arrow-right"></i></a>
                                         </div>
