--- a/CarRental/ui/templates/Gallery.html
+++ b/CarRental/ui/templates/Gallery.html
@@ -15,22 +15,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
   	<meta name="description" content="">
-    <link rel="icon" type="image/png" href="../ui/assets/img/CRicon.jpg"/>
+    <link rel="icon" type="image/png" href="../assets/img/CRicon.jpg"/>
 	
-	<link rel="stylesheet" href="../ui/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
-  	<link rel="stylesheet" href="../ui/assets/css/magnific-popup.css">
+  	<link rel="stylesheet" href="../assets/css/magnific-popup.css">
 
-	<link rel="stylesheet" href="../ui/assets/css/animate.min.css">
-	<link rel="stylesheet" href="../ui/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/css/animate.min.css">
+	<link rel="stylesheet" href="../assets/css/font-awesome.min.css">
 
-  	<link rel="stylesheet" href="../ui/assets/css/nivo-lightbox.css">
-  	<link rel="stylesheet" href="../ui/assets/css/nivo_themes/default/default.css">
+  	<link rel="stylesheet" href="../assets/css/nivo-lightbox.css">
+  	<link rel="stylesheet" href="../assets/css/nivo_themes/default/default.css">
 
-  	<link rel="stylesheet" href="../ui/assets/css/hover-min.css">
-  	<link rel="stylesheet" href="../ui/assets/css/flexslider.css">
+  	<link rel="stylesheet" href="../assets/css/hover-min.css">
+  	<link rel="stylesheet" href="../assets/css/flexslider.css">
 
-	<link rel="stylesheet" href="../ui/assets/css/style2.css">
+	<link rel="stylesheet" href="../assets/css/style2.css">
 
   	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
@@ -99,8 +99,8 @@
 
                         <div class="iso-box breakfast pizza lunch col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img1.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img1.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img1.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img1.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                     <h3>Car1</h3>
@@ -121,8 +121,8 @@
 
                         <div class="iso-box breakfast lunch dinner col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img2.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img2.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img2.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img2.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                       <h3>Car1</h3>
@@ -140,8 +140,8 @@
 
                         <div class="iso-box dinner col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img3.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img3.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img3.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img3.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                       <h3>Car1</h3>
@@ -161,8 +161,8 @@
 
                         <div class="iso-box breakfast col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img4.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img4.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img4.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img4.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                       <h3>Car1</h3>
@@ -180,8 +180,8 @@
 
                         <div class="iso-box lunch col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img5.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img5.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img5.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img5.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                       <h3>Car1</h3>
@@ -199,8 +199,8 @@
 
                         <div class="iso-box pizza lunch col-md-4 col-sm-6">
                           <div class="gallery-thumb">
-                            <a href="../ui/assets/img/gallery-img6.jpg" data-lightbox-gallery="food-gallery">
-                              <img src="../ui/assets/img/gallery-img6.jpg" class="fluid-img" alt="Gallery">
+                            <a href="../assets/img/gallery-img6.jpg" data-lightbox-gallery="food-gallery">
+                              <img src="../assets/img/gallery-img6.jpg" class="fluid-img" alt="Gallery">
                                 <div class="gallery-overlay">
                                   <div class="gallery-item">
                                       <h3>Car1</h3>
@@ -227,25 +227,25 @@
   </div>
 </section>
 
-<script src="../ui/assets/js/jquery.js"></script>
-<script src="../ui/assets/js/bootstrap.min.js"></script>
+<script src="../assets/js/jquery.js"></script>
+<script src="../assets/js/bootstrap.min.js"></script>
 
-<script src="../ui/assets/js/jquery.magnific-popup.min.js"></script>
+<script src="../assets/js/jquery.magnific-popup.min.js"></script>
 
-<script src="../ui/assets/js/jquery.sticky.js"></script>
-<script src="../ui/assets/js/jquery.backstretch.min.js"></script>
+<script src="../assets/js/jquery.sticky.js"></script>
+<script src="../assets/js/jquery.backstretch.min.js"></script>
 
-<script src="../ui/assets/js/isotope.js"></script>
-<script src="../ui/assets/js/imagesloaded.min.js"></script>
-<script src="../ui/assets/js/nivo-lightbox.min.js"></script>
+<script src="../assets/js/isotope.js"></script>
+<script src="../assets/js/imagesloaded.min.js"></script>
+<script src="../assets/js/nivo-lightbox.min.js"></script>
 
-<script src="../ui/assets/js/jquery.flexslider-min.js"></script>
+<script src="../assets/js/jquery.flexslider-min.js"></script>
 
-<script src="../ui/assets/js/jquery.parallax.js"></script>
-<script src="../ui/assets/js/smoothscroll.js"></script>
-<script src="../ui/assets/js/wow.min.js"></script>
+<script src="../assets/js/jquery.parallax.js"></script>
+<script src="../assets/js/smoothscroll.js"></script>
+<script src="../assets/js/wow.min.js"></script>
 
-<script src="../ui/assets/js/custom1.js"></script>
+<script src="../assets/js/custom1.js"></script>
 
 </body>
 </html>
