--- a/CarRental/ui/templates/index_loggedin.html
+++ b/CarRental/ui/templates/index_loggedin.html
@@ -5,31 +5,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/CRicon.jpg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/CRicon.jpg" type="image/x-icon">
 
     <title>Home - Logged In</title>
     <!--from wheel car rental-->
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/css_reset.css">
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/jquery.datetimepicker.min.css">
-    <link rel="stylesheet" href="../ui/assets/css/bootstrap-select.min.css">
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/loaders.min.css">
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/index.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/css_reset.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/jquery.datetimepicker.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap-select.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/loaders.min.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/index.css">
 
     <!--[if lt IE 9]-->
-    <script src="../ui/assets/js/html5shiv.min.js"></script>
-    <script src="../ui/assets/js/respond.min.js"></script>
+    <script src="../assets/js/html5shiv.min.js"></script>
+    <script src="../assets/js/respond.min.js"></script>
     <!--[endif]-->
 
     <!--From carental-->
-    <link rel="stylesheet" href="../ui/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../ui/assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="../ui/assets/css/animate.min.css">
-    <link rel="stylesheet" href="../ui/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../ui/assets/css/nivo-lightbox.css">
-    <link rel="stylesheet" href="../ui/assets/css/nivo_themes/default/default.css">
-    <link rel="stylesheet" href="../ui/assets/css/hover-min.css">
-    <link rel="stylesheet" href="../ui/assets/css/flexslider.css">
-    <link rel="stylesheet" href="../ui/assets/css/style1.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="../assets/css/animate.min.css">
+    <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/css/nivo-lightbox.css">
+    <link rel="stylesheet" href="../assets/css/nivo_themes/default/default.css">
+    <link rel="stylesheet" href="../assets/css/hover-min.css">
+    <link rel="stylesheet" href="../assets/css/flexslider.css">
+    <link rel="stylesheet" href="../assets/css/style1.css">
 
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
@@ -39,23 +39,23 @@
 
     <!-- Self -->
 
-    <link href="../ui/assets/css/owl.carousel.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../ui/assets/css/slick.css" />
-    <link rel="stylesheet" href="../ui/assets/css/slick-theme.css" />
-    <link href="../ui/assets/css/style.css" rel="stylesheet">
-    <link href="../ui/assets/css/responsive.css" rel="stylesheet">
+    <link href="../assets/css/owl.carousel.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/slick.css" />
+    <link rel="stylesheet" href="../assets/css/slick-theme.css" />
+    <link href="../assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/responsive.css" rel="stylesheet">
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
               <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
               <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-    <script src="../ui/assets/js/jquery.min.js"></script>
-    <script src="../ui/assets/js/app.js"></script>
-    <script src="../ui/assets/js/gen_validatorv31.js"></script>
-    <script src="../ui/assets/js/wow.min.js"></script>
-    <script src="../ui/assets/js/bootstrap.min.js"></script>
-    <script src="../ui/assets/js/smoothscroll.js"></script>
-    <script src="../ui/https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/app.js"></script>
+    <script src="../assets/js/gen_validatorv31.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+    <script src="../https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
         new WOW().init();
     </script>
@@ -204,7 +204,7 @@
                     <div class="col-md-4 padd-r0 padd-md-lr15 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="wheel-service-item text-center wheel-bg3">
                             <div class="wheel-service-logo">
-                                <img src="../ui/assets/img/ico1.png" alt="">
+                                <img src="../assets/img/ico1.png" alt="">
                             </div>
                             <h5>Most Affordable</h5>
                             <p>Getting a reliable car in a really fair price is hardly possible these days. So,
@@ -214,7 +214,7 @@
                     <div class="col-md-4 padd-lr0 padd-md-lr15 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="wheel-service-item text-center wheel-service-active wheel-bg4">
                             <div class="wheel-service-logo">
-                                <img src="../ui/assets/img/ico2.png" alt="">
+                                <img src="../assets/img/ico2.png" alt="">
                             </div>
                             <h5>Reliable Service</h5>
                             <p>Our cars have the best quality. Many of our customers have been appreciating our
@@ -224,7 +224,7 @@
                     <div class="col-md-4 padd-l0 padd-md-lr15 wow fadeInUp" data-wow-delay="0.9s">
                         <div class="wheel-service-item  text-center wheel-bg5">
                             <div class="wheel-service-logo">
-                                <img src="../ui/assets/img/ico3.png" alt="">
+                                <img src="../assets/img/ico3.png" alt="">
                             </div>
                             <h5>Easy Booking and Searching</h5>
                             <p>Anyone at any place and time can reserve and rent any car when it is with us. Because we
@@ -290,7 +290,7 @@
 
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-thumb">
-                        <img src="../ui/assets/img/chef1.jpg" class="img-responsive" alt="Team">
+                        <img src="../assets/img/chef1.jpg" class="img-responsive" alt="Team">
                         <div class="team-des">
                             <h3><br>Vitz</h3>
                             <h4>15$/hr</h4>
@@ -301,7 +301,7 @@
 
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="team-thumb">
-                        <img src="../ui/assets/img/chef2.jpg" class="img-responsive" alt="Team">
+                        <img src="../assets/img/chef2.jpg" class="img-responsive" alt="Team">
                         <div class="team-des">
                             <h3><br>Yaris</h3>
                             <h4>30$/hr</h4>
@@ -312,7 +312,7 @@
 
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="team-thumb">
-                        <img src="../ui/assets/img/chef3.jpg" class="img-responsive" alt="Team">
+                        <img src="../assets/img/chef3.jpg" class="img-responsive" alt="Team">
                         <div class="team-des">
                             <h3><br>Nissan</h3>
                             <h4>25$/hr</h4>
@@ -354,7 +354,7 @@
                         <div class="wheel-news-item   wheel-bg1">
                             <i class="">29 December</i>
                             <div class="wheel-news-item-img">
-                                <img src="../ui/assets/img/i8.jpg" alt="">
+                                <img src="../assets/img/i8.jpg" alt="">
                             </div>
                             <div class="wheel-news-text">
                                 <h5><a href="news-details.html">Introducing the 2019 Mustang BULLITT.</a></h5>
@@ -369,7 +369,7 @@
                         <div class="wheel-news-item   wheel-bg1">
                             <i class="">6 January</i>
                             <div class="wheel-news-item-img">
-                                <img src="../ui/assets/img/i9.jpg" alt="">
+                                <img src="../assets/img/i9.jpg" alt="">
                             </div>
                             <div class="wheel-news-text">
                                 <h5><a href="news-details.html"> ExtremeTech’s Best Cars for 2020</a></h5>
@@ -387,7 +387,7 @@
                         <div class="wheel-news-item   wheel-bg1">
                             <i class="">1 January</i>
                             <div class="wheel-news-item-img">
-                                <img src="../ui/assets/img/i10.jpg" alt="">
+                                <img src="../assets/img/i10.jpg" alt="">
                             </div>
                             <div class="wheel-news-text">
                                 <h5><a href="news-details.html">Most comfortable cars 2020</a></h5>
@@ -428,7 +428,7 @@
                         <div class="col-lg-12 col-sm-12">
                             <div class="car-slider-content">
                                 <div class="car-img">
-                                    <img src="../ui/assets/img/car-2.png" alt="">
+                                    <img src="../assets/img/car-2.png" alt="">
                                 </div>
                                 <h3>LUXURY</h3>
                                 <p>A standard SUV offers flexibility, seating capacity and power for cruising around
@@ -444,7 +444,7 @@
                         <div class="col-lg-12 col-sm-12">
                             <div class="car-slider-content">
                                 <div class="car-img">
-                                    <img src="../ui/assets/img/car-3.png" alt="">
+                                    <img src="../assets/img/car-3.png" alt="">
                                 </div>
                                 <h3>ECONOMY</h3>
                                 <p>A standard SUV offers flexibility, seating capacity and power for cruising around
@@ -474,7 +474,7 @@
                         <div class="col-lg-12 col-sm-12">
                             <div class="car-slider-content">
                                 <div class="car-img">
-                                    <img src="../ui/assets/img/car-1.png" alt="">
+                                    <img src="../assets/img/car-1.png" alt="">
                                 </div>
                                 <h3>SUV</h3>
                                 <p>A standard SUV offers flexibility, seating capacity and power for cruising around
@@ -526,69 +526,69 @@
 
 
     <!-- Jquery JS -->
-    <script src="../ui/assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
 
     <!-- Bootstrap JS -->
-    <script src="../ui/assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
     <!-- owl.carousel JS -->
-    <script src="../ui/assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
 
     <!-- slick JS -->
-    <script src="../ui/assets/js/slick.min.js"></script>
+    <script src="../assets/js/slick.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../ui/assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
     <!--wheel-->
     <!----------------------->
-    <script type="text/javascript" src="../ui/assets/js/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="../ui/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../assets/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
     <!-- count -->
-    <script type="text/javascript" src='../ui/assets/js/jquery.countTo.js'></script>
+    <script type="text/javascript" src='../assets/js/jquery.countTo.js'></script>
     <!-- google maps -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt5tJTim4lOO3ojbGARhPd1Z3O3CnE-C8"
         type="text/javascript"></script>
     <!-- swiper -->
-    <script type="text/javascript" src="../ui/assets/js/idangerous.swiper.min.js"></script>
-    <script type="text/javascript" src="../ui/assets/js/equalHeightsPlugin.js"></script>
-    <script type="text/javascript" src="../ui/assets/js/jquery.datetimepicker.full.min.js"></script>
+    <script type="text/javascript" src="../assets/js/idangerous.swiper.min.js"></script>
+    <script type="text/javascript" src="../assets/js/equalHeightsPlugin.js"></script>
+    <script type="text/javascript" src="../assets/js/jquery.datetimepicker.full.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script type="text/javascript" src="../ui/assets/js/bootstrap-select.min.js"></script>
-    <script type="text/javascript" src="../ui/assets/js/index.js"></script>
+    <script type="text/javascript" src="../assets/js/bootstrap-select.min.js"></script>
+    <script type="text/javascript" src="../assets/js/index.js"></script>
     <!-- sixth block end -->
 
 
     <!-----carental------->
     <!-- javscript js -->
-    <script src="../ui/assets/js/jquery.js"></script>
-    <script src="../ui/assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
-    <script src="../ui/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
 
-    <script src="../ui/assets/js/jquery.sticky.js"></script>
-    <script src="../ui/assets/js/jquery.backstretch.min.js"></script>
+    <script src="../assets/js/jquery.sticky.js"></script>
+    <script src="../assets/js/jquery.backstretch.min.js"></script>
 
-    <script src="../ui/assets/js/isotope.js"></script>
-    <script src="../ui/assets/js/imagesloaded.min.js"></script>
-    <script src="../ui/assets/js/nivo-lightbox.min.js"></script>
+    <script src="../assets/js/isotope.js"></script>
+    <script src="../assets/js/imagesloaded.min.js"></script>
+    <script src="../assets/js/nivo-lightbox.min.js"></script>
 
-    <script src="../ui/assets/js/jquery.flexslider-min.js"></script>
+    <script src="../assets/js/jquery.flexslider-min.js"></script>
 
-    <script src="../ui/assets/js/jquery.parallax.js"></script>
-    <script src="../ui/assets/js/smoothscroll.js"></script>
-    <script src="../ui/assets/js/wow.min.js"></script>
+    <script src="../assets/js/jquery.parallax.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
 
-    <script src="../ui/assets/js/custom.js"></script>
+    <script src="../assets/js/custom.js"></script>
 
     <!--tourbig-->
-    <script src="../ui/assets/js/smoothscroll.js"></script>
-    <script src="../ui/assets/js/jquery.scrollTo.js"></script>
-    <script src="../ui/assets/js/matchMedia.js"></script>
-    <script src="../ui/assets/js/owl.carousel.min.js"></script>
-    <script src="../ui/assets/js/wow.min.js"></script>
-    <script src="../ui/assets/js/jquery.fitvids.js"></script>
-    <script src="../ui/assets/js/custom.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+    <script src="../assets/js/jquery.scrollTo.js"></script>
+    <script src="../assets/js/matchMedia.js"></script>
+    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/jquery.fitvids.js"></script>
+    <script src="../assets/js/custom.js"></script>
 
 </body>
 
