--- a/CarRental/ui/templates/footer.html
+++ b/CarRental/ui/templates/footer.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../ui/assets/img/CRicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/css_reset.css">
-    <link rel="stylesheet" type="text/css" href="../ui/assets/css/index.css">
-    <link rel="stylesheet" href="../ui/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../ui/assets/css/style1.css">
+    <link rel="icon" href="../assets/img/CRicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../assets/css/css_reset.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/style1.css">
 
 </head>
 
