--- a/CarRental/ui/templates/index.html
+++ b/CarRental/ui/templates/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/CRicon.jpg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/CRicon.jpg" type="image/x-icon">
 
     <title>Home - CARENTAL</title>
     <!--from wheel car rental-->
