--- a/CarRental/ui/templates/login.html
+++ b/CarRental/ui/templates/login.html
@@ -8,26 +8,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="../ui/assets/img/CRicon.jpg" />
+	<link rel="icon" type="image/png" href="../assets/img/CRicon.jpg" />
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/fonts/iconic/css/material-design-iconic-font.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/fonts/iconic/css/material-design-iconic-font.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/animate/animate.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/css-hamburgers/hamburgers.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/animsition/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/animsition/css/animsition.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/select2/select2.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/vendor/daterangepicker/daterangepicker.css">
+	<link rel="stylesheet" type="text/css" href="../assets/vendor/daterangepicker/daterangepicker.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ui/assets/css/util.css">
-	<link rel="stylesheet" type="text/css" href="../ui/assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/util.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 
 
 	<!--===============================================================================================-->
@@ -38,7 +38,7 @@
 
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54 backgri">
-				<img class="img" src="../ui/assets/img/CRLogo.png" alt="" width="400" height="200">
+				<img class="img" src="../assets/img/CRLogo.png" alt="" width="400" height="200">
 				<form class="login100-form validate-form">
 
 					<span class="login100-form-title p-b-49">
@@ -99,21 +99,21 @@
 	<div id="dropDownSelect1"></div>
 
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../assets/vendor/jquery/jquery-3.2.1.min.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/animsition/js/animsition.min.js"></script>
+	<script src="../assets/vendor/animsition/js/animsition.min.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/bootstrap/js/popper.js"></script>
-	<script src="../ui/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../assets/vendor/bootstrap/js/popper.js"></script>
+	<script src="../assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/select2/select2.min.js"></script>
+	<script src="../assets/vendor/select2/select2.min.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/daterangepicker/moment.min.js"></script>
-	<script src="../ui/assets/vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="../assets/vendor/daterangepicker/moment.min.js"></script>
+	<script src="../assets/vendor/daterangepicker/daterangepicker.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/vendor/countdowntime/countdowntime.js"></script>
+	<script src="../assets/vendor/countdowntime/countdowntime.js"></script>
 	<!--===============================================================================================-->
-	<script src="../ui/assets/js/main1.js"></script>
+	<script src="../assets/js/main1.js"></script>
 
 </body>
 
