--- a/CarRental/ui/templates/login.html
+++ b/CarRental/ui/templates/login.html
@@ -39,7 +39,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54 backgri">
 				<img class="img" src="../assets/img/CRLogo.png" alt="" width="400" height="200">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" action="#" method="POST">
 
 					<span class="login100-form-title p-b-49">
 						LOGIN TO <span style="color: rgb(248,104,21);">CARENTAL</span>
